Fixed some spelling in the rules. Fixed not being able to jump back to the top of the rule page after jumping and scrolling down. Added tab spaces for paragraphs and removed space after paragraphs before unordered lists

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -91,6 +91,11 @@ td, th {
 
 p {
     margin-bottom: 1em;
+    text-indent: 30px;
+}
+
+p + ul {
+    margin-top: -15px;
 }
 
 [ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak {
